<resources>
    <string name="app_name">JustReliefDoctor</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="please_help_us_with_the_below_information">Please help us with the below information</string>
    <string name="doctor_name">Doctor Name *</string>
    <string name="error_doctor_name_empty">Doctor name is empty</string>
    <string name="specialization">Specialization *</string>
    <string name="city">City *</string>
    <string name="error_registration_no_empty">Registration Number is empty</string>
    <string name="registration_number">Registration Number *</string>
    <string name="error_registration_council_empty">Registration Council is empty</string>
    <string name="registration_council">Registration Council</string>
    <string name="year">Year *</string>
    <string name="find_my_doctor">Find my Doctor</string>
    <string name="resend_mail">Resend Mail ?</string>
    <string name="get_a_new_doctor_profile">Get a new Doctor profile</string>
    <string name="your_doctor_profile_is_not_listed_on_justrelief_com_nfill_in_all_your_details_and_create_a_new_doctor_profile">Your doctor profile is not listed on justrelief.com. \nFill in all your details and create a new doctor profile.</string>
    <string name="go_back">Go Back</string>
    <string name="create_doctor_profile">Create doctor profile</string>
    <string name="year_of_registration">Year of Registration *</string>
    <string name="error_verify_email_address">Please Verify your email address</string>
    <string name="email_resend">Email has been send</string>
    <string name="error_verify_not_email">Please Verify your email address</string>
    <string name="doctors_details">Doctors Details</string>
    <string name="error_city_name">City Name is empty</string>
    <string name="error_specilalization_name_empty">Specialization is empty</string>
    <string name="error_check_information">Please your information</string>
    <string name="background_error">Background Error</string>
    <string name="contact_doctor_details"><![CDATA[Contact & Doctor Details]]></string>
    <string name="qualification_specialization"><![CDATA[Qualification & Specialization]]></string>
    <string name="registration_detail">Registration Details</string>
    <string name="clinic_details">Clinic</string>
    <string name="services">Services</string>
    <string name="award_membership_details"><![CDATA[Award & Membership]]></string>
    <string name="personal_details">Personal Details</string>
    <string name="prefix">Prefix *</string>
    <string name="name">Name *</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="year_of_experience">Year of Experience *</string>
    <string name="about_me">About Me</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="contact_details">Contact Details</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="save_and_next">Save and Next</string>
    <string name="error">Error</string>
    <string name="errors">Errors</string>
    <string name="information_save_successfully">Information Saved Successfully</string>
    <string name="education">Education *</string>
    <string name="educations">Educations *</string>
    <string name="qualification">Qualification *</string>
    <string name="college">College *</string>
    <string name="college_name">College Name</string>
    <string name="delete">Delete</string>
    <string name="passing_year">Passing Year</string>
    <string name="qualifications">Qualification</string>
    <string name="mbbs">MBBS</string>
    <string name="mpharma">M PHARMA</string>
    <string name="mds">MDS</string>
    <string name="md">MD</string>
    <string name="award_year">Award Year</string>
    <string name="award_description">Award Description</string>
    <string name="title">Title</string>
    <string name="awards">Awards *</string>
    <string name="membership">Membership</string>
    <string name="save">Save</string>
    <string name="experience">Experience *</string>
    <string name="registration_details">Registration Details *</string>
    <string name="council_registration_number">Council Registration Number *</string>
    <string name="council_name">Council Name *</string>
    <string name="documents_certificates">Documents / Certificates *</string>
    <string name="document_type">Document Type</string>
    <string name="choose_document">Choose Document</string>
    <string name="document_save_successfully">Document Save Successfully</string>
    <string name="error_gender_empty">Gender is empty</string>
    <string name="error_about_me_empty">About Me is empty</string>
    <string name="error_contact_no_empty">Contact Number is empty</string>
    <string name="error_year_experience_is_empty">Year Experience is empty</string>
    <string name="error_city_name_empty">City Name is empty</string>
    <string name="error_prefix_empty">Prefix is empty</string>
    <string name="error_choose_image_empty">Choose Image is empty</string>
    <string name="error_document_empty">Choose Document is empty</string>
    <string name="error_write_correct_information">Write Correct Information</string>
    <string name="error_document_type_fail">Document Type Fail</string>
    <string name="error_year_empty">Year is empty</string>
    <string name="error_award_title">Award Title is empty</string>
    <string name="error_membership_empty">Membership is empty</string>
    <string name="install_clinic_app">Please install Clinic App</string>

    <string-array name="prefix">
        <item>Select</item>
        <item>Dr.</item>
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Mrs.</item>

    </string-array>

    <string-array name="qualification">
        <item>Select</item>
        <item>Dr.</item>
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Mrs.</item>

    </string-array>


</resources>
