<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        style="@style/simple_sv"
        android:layout_above="@+id/btn_save_and_next">

        <RelativeLayout style="@style/rl_root">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/ll_style"
                android:id="@+id/ll_upload_photo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rectangle_textview_shape"
                android:paddingBottom="@dimen/tv_paddingBottom"
                android:paddingTop="@dimen/tv_paddingTop">

            <simplifii.framework.widgets.CustomAutoResizeTextView
                android:id="@+id/tv_upload_council_number"
                style="@style/tv_autoResize_black_style_heading"
                android:gravity="start"
                android:text="Photos" />
            </LinearLayout>

                <include layout="@layout/layout_no_record_found"/>
                <include layout="@layout/layout_container"/>



            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_personal_details"
                android:layout_below="@+id/ll_upload_photo"
                style="@style/ll_style"
                android:orientation="vertical">

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_personal_detail"
                    style="@style/tv_black_style_heading"
                    android:text="@string/personal_details" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_prefix"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/prefix" />

                <Spinner
                    android:id="@+id/spin_prefix"
                    style="@style/spin_style" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_name"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/name" />

                <simplifii.framework.widgets.CustomFontTextInputEditText
                    android:id="@+id/et_name"
                    style="@style/et_black_style_background"
                    android:enabled="false"
                    android:inputType="text" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_gender"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/gender" />


                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tv_paddingLeft"
                    android:layout_marginRight="@dimen/tv_paddingRight"
                    android:orientation="horizontal"
                    android:weightSum="50">

                    <RadioButton
                        android:id="@+id/rb_male"

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:text="Female" />


                </RadioGroup>
                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_city"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/city" />

                <simplifii.framework.widgets.CustomFontTextInputEditText
                    android:id="@+id/et_city"
                    style="@style/et_black_style_background"
                    android:enabled="false"
                    android:inputType="text" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_year_experience"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/year_of_experience" />

                <simplifii.framework.widgets.CustomFontTextInputEditText
                    android:id="@+id/et_year_experience"
                    android:maxLength="2"
                    style="@style/et_black_style_background"
                    android:inputType="number" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_about_me"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/about_me" />

                <simplifii.framework.widgets.CustomFontTextInputEditText
                    android:id="@+id/et_about_me"
                    style="@style/et_black_style_background"
                    android:inputType="text" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_profile_photo"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/profile_photo" />

                <RelativeLayout
                    android:id="@+id/rl_choose_image"
                    style="@style/et_black_style_background"

                    >

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"

                        android:src="@mipmap/photocamera2" />

                    <simplifii.framework.widgets.CustomFontTextView
                        android:id="@+id/tv_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="12dp"
                        android:layout_toRightOf="@id/iv_image"
                        android:clickable="true"
                        android:text="Choose Image" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_contact_details"
                style="@style/ll_style"
                android:layout_below="@+id/ll_personal_details"
                android:orientation="vertical">

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_contact_details"
                    style="@style/tv_black_style_heading"
                    android:text="@string/contact_details" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_contact_number"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/contact_number" />

                <simplifii.framework.widgets.CustomFontTextInputEditText
                    android:id="@+id/et_contact_number"
                    style="@style/et_black_style_background"
                    android:enabled="false"
                    android:inputType="number" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_email_address"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/email_address" />

                <simplifii.framework.widgets.CustomFontTextInputEditText
                    android:id="@+id/et_email_address"
                    style="@style/et_black_style_background"
                    android:enabled="false"
                    android:inputType="text" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <simplifii.framework.widgets.CustomFontButton
        android:id="@+id/btn_save_and_next"
        style="@style/simple_button_style"
        android:layout_alignParentBottom="true"
        android:text="@string/save_and_next" />

</RelativeLayout>