<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        style="@style/simple_sv"
        android:layout_above="@+id/btn_save_and_next">

        <RelativeLayout style="@style/rl_root">

            <LinearLayout
                android:id="@+id/ll_upload_award"
                style="@style/ll_root"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/rectangle_textview_shape"
                    android:paddingBottom="@dimen/tv_paddingBottom"
                    android:paddingTop="@dimen/tv_paddingTop"
                    android:weightSum="11">

                    <simplifii.framework.widgets.CustomAutoResizeTextView
                        android:id="@+id/tv_upload_award"
                        style="@style/tv_autoResize_black_style_heading"
                        android:layout_weight="3"
                        android:paddingLeft="0dp"
                        android:gravity="start"
                        android:text="@string/award_description" />

                    <simplifii.framework.widgets.CustomAutoResizeTextView
                        android:id="@+id/tv_upload_award_year"
                        style="@style/tv_autoResize_black_style_heading"
                        android:layout_weight="4"
                        android:text="@string/award_year" />

                    <simplifii.framework.widgets.CustomAutoResizeTextView
                        android:id="@+id/tv_upload_delete"
                        android:layout_marginRight="@dimen/tv_paddingRight"
                        android:gravity="start"
                        style="@style/tv_autoResize_black_style_heading"
                        android:layout_weight="4"
                        android:text="@string/delete" />


                </LinearLayout>


                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_no_record"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_upload_award_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/image_containerBottom">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_award"
                style="@style/ll_style"
                android:paddingBottom="0dp"

                android:layout_below="@+id/ll_upload_award"
                android:orientation="vertical">

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_education"
                    style="@style/tv_black_style_heading"
                    android:text="@string/awards" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_qualification"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/title" />

                <simplifii.framework.widgets.CustomFontTextInputEditText
                    android:id="@+id/et_title"
                    style="@style/et_black_style_background"
                    android:inputType="text" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_year"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/year" />

                <Spinner
                    android:id="@+id/spin_year"
                    style="@style/spin_style">

                </Spinner>

            </LinearLayout>


            <simplifii.framework.widgets.CustomFontButton
                android:id="@+id/btn_award_save"
                style="@style/button_style_different_background"
                android:layout_below="@+id/ll_award"
                android:text="@string/save" />

            <LinearLayout
                android:id="@+id/ll_membership"
                style="@style/ll_style"
                android:layout_below="@+id/btn_award_save"
                android:orientation="vertical">

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_membership"
                    style="@style/tv_black_style_heading"
                    android:text="@string/membership" />

                <simplifii.framework.widgets.CustomFontTextView
                    android:id="@+id/tv_membership_title"
                    style="@style/tv_black_style_heading_without_background"
                    android:text="@string/title" />

                <simplifii.framework.widgets.ContactsCompletionView
                    android:id="@+id/ccv_membership_title"
                    style="@style/ccv_style" />

            </LinearLayout>


            <simplifii.framework.widgets.CustomFontButton
                android:id="@+id/btn_membership_save"
                style="@style/button_style_different_background"
                android:layout_below="@+id/ll_membership"
                android:text="@string/save" />

        </RelativeLayout>
        </ScrollView>
    </LinearLayout>
